--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         </plugins>
     </build>
 
-
+    <!-- Dependency Management for Hibernate -->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -48,7 +48,6 @@
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -73,12 +72,10 @@
             <groupId>org.hibernate.ogm</groupId>
             <artifactId>hibernate-ogm-cassandra</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-search-orm</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.hibernate.ogm</groupId>
             <artifactId>hibernate-ogm-infinispan</artifactId>
@@ -98,6 +95,12 @@
             <artifactId>jbossjta</artifactId>
             <version>4.16.6.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+
 
     </dependencies>
 
